# Vkxel

./: .gitignore  .gitmodules  CMakeLists.txt  vcpkg.json
.github/workflows/: build.yml
shader/: basic.frag.slang  basic.slang  basic.vert.slang  compute.slang  dual_contouring.slang  graphics.slang  sdf.slang  test.slang  util.slang
source/: application.h  buffer.h  camera.cpp  camera.h  check.h  controller.cpp  controller.h  file.cpp  file.h  gui.cpp  gui.h  input.cpp  input.h  main.cpp  model.cpp  model.h  renderer.cpp  renderer.h  shader.cpp  shader.h  transform.cpp  transform.h  type.h  vtime.cpp  vtime.h  window.cpp  window.h
source/custom/: dual_contouring.cpp  dual_contouring.h  gpu_dual_contouring.cpp  gpu_dual_contouring.h  sdf.cpp  sdf.h  sdf_surface.cpp  sdf_surface.h
source/editor/: editor.cpp  editor.h
source/engine/: application.h  compute.cpp  compute.h  data_type.h  engine.cpp  engine.h  file.cpp  file.h  gui.cpp  gui.h  input.cpp  renderer.cpp  renderer.h  resource.cpp  resource.h  resource_type.h  shader.cpp  shader.h  timer.cpp  timer.h  type.h  vtime.cpp  vtime.h  window.cpp  window.h
source/entry/: main.cpp  model.cpp  model.h  model_library.cpp  model_library.h  scene_library.cpp  scene_library.h
source/reflect/: reflect.cpp  reflect.hpp
source/util/: application.h  check.h  debug.hpp  delegate.hpp
source/vkutil/: buffer.cpp  buffer.h  command.cpp  command.h  descriptor.cpp  descriptor.h  image.cpp  image.h  pipeline.cpp  pipeline.h
source/world/: camera.cpp  camera.h  canvas.cpp  canvas.h  component.h  controller.cpp  controller.h  drawer.cpp  drawer.h  gameobject.h  gameobject.hpp  mesh.cpp  mesh.h  model.cpp  model.h  mover.cpp  mover.h  object.h  scene.cpp  scene.h  transform.cpp  transform.h
